modificado ruta librerias